k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horror-game
  namespace: horror-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: horror-game
  template:
    metadata:
      labels:
        app: horror-game
    spec:
      containers:
        - name: horror-game
          image: registry.gitlab.com/grupo02-paas/paas-infrastructure/horror-game:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: gitlab-registry-secret
